--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,8 @@ header {
   padding: 0.5vw 1vw;
   margin-left: 5px;
   margin-bottom: 2vw;
+  background-color: black;
+  color: white;
 }
 .displayDiv {
   width: 100%;
