--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,15 @@ header {
   background-color: black;
   color: white;
 }
+.searchBar select {
+  margin-bottom: 2vw;
+  background-color: black;
+  color: white;
+  margin-left: 2vw;
+}
+.selectDiv {
+  text-align: end;
+}
 .displayDiv {
   width: 100%;
   display: flex;
